--- a/src/styles/tailwind.src.css
+++ b/src/styles/tailwind.src.css
@@ -2,12 +2,88 @@
 @tailwind components;
 @tailwind utilities;
 
-.alert {
-  background: tomato;
-  color: #fff;
-  border-radius: 5px;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
+.theme {
+  color: hsl(180, 52%, 96%); /* bg */
+  color: hsl(180, 31%, 95%); /* filter tablets */
+  color: hsl(180, 8%, 52%); /* bg */
+  color: hsl(179, 29%, 51%); /* header bg */
+  color: hsl(180, 14%, 20%); /* active btn bg*/
+}
+* {
+  margin: 0;
+  padding: 0;
+  font-family: "Spartan", sans-serif;
+}
+.main {
+}
+.header {
+  background-color: hsl(179, 29%, 51%);
+  height: 25vh;
+  position: relative;
+}
+.bg-img {
+  width: 100%;
+  height: 100%;
+}
+.filter-box {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  color: hsl(179, 29%, 51%);
+  transform: translate(-50%, 50%);
+  -webkit-transform: translate(-50%, 50%);
+  -moz-transform: translate(-50%, 50%);
+  -ms-transform: translate(-50%, 50%);
+  -o-transform: translate(-50%, 50%);
+}
+
+.clear-btn {
+  height: 30px;
+  line-height: 30px;
+}
+.remove-btn {
+  background-color: hsl(179, 29%, 51%);
+}
+.tablet {
+  background-color: hsl(180, 31%, 95%);
+  color: hsl(179, 29%, 51%);
+}
+.content {
+  background-color: hsl(180, 31%, 95%);
+  height: 75vh;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.content::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.content {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.card {
+  border-left: 5px solid hsl(179, 29%, 51%);
+}
+
+.company {
+  color: hsl(179, 29%, 51%);
+}
+.new {
+  background-color: hsl(179, 29%, 51%);
+}
+.featured {
+  background-color: hsl(180, 14%, 20%);
+}
+.postedAt,
+.contract,
+.location {
+  color: hsl(180, 8%, 52%);
+}
+
+@media only screen and (max-width: 767px) {
+  .job-logo {
+    margin-top: -60px;
+  }
 }
