--- a/src/styles/tailwind.src.css
+++ b/src/styles/tailwind.src.css
@@ -14,8 +14,6 @@
   padding: 0;
   font-family: "Spartan", sans-serif;
 }
-.main {
-}
 .header {
   background-color: hsl(179, 29%, 51%);
   height: 25vh;
@@ -24,6 +22,7 @@
 .bg-img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 .filter-box {
   position: absolute;
